fix some stage